--- a/css/style.css
+++ b/css/style.css
@@ -200,8 +200,29 @@ main {
 }
 
 #menu-items {
-    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
     padding-right: 20px;
+    flex: 1;
+}
+
+@media (max-width: 899px) {
+    #menu-items {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 767px) {
+    #menu-items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 575px) {
+    #menu-items {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* Table Selection */
